--- a/src/components/Layout/Footer/styles.module.css
+++ b/src/components/Layout/Footer/styles.module.css
@@ -1,17 +1,8 @@
-.mainFooter {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 45px 0;
-    div {
-        font-size: 25px;
-        font-weight: 700;
-        &.small {
-            font-size: 12px;
-            font-weight: 400;
-            &:last-child {
-                text-align: right;
-            }
-        }
-    }
-}
+.footer {
+    background-color: #f2f2f2;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 50px
+  }
