--- a/src/components/Layout/Header/styles.module.css
+++ b/src/components/Layout/Header/styles.module.css
@@ -1,25 +1,9 @@
-.mainHeader {
-    display: flex;
-    justify-content: space-between;
-    padding: 45px 0;
-    margin-bottom: 90px;
-
-    .title {
-        font-size: 25px;
-        font-weight: 700;
-    }
-
-    nav {
-        a {
-            margin-left: 35px;
-            font-size: 18px;
-            font-weight: 400;
-            &.linkActive {
-                color: #004FEC;
-            }
-            &:first-child {
-                margin-left: 0;
-            }
-        }
-    }
-}
+header {
+    background-color: #f2f2f2;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 50px
+  }
+  
